pkgs/artifacts-tui/tests/snapshots/command_tests__generator_failes_scenario.snap
---
source: tests/command_tests.rs
info:
  program: artifacts-cli
  args:
    - generate
    - /home/palo/dev/nixos/nixos-artifacts/pkgs/artifacts-tui/examples/generator_failes/backend.toml
    - /home/palo/dev/nixos/nixos-artifacts/pkgs/artifacts-tui/examples/generator_failes/make.json
  env:
    TMPDIR: /tmp/artifacts-tui-ci
  stdin: "one\ntwo\n"
---
success: true
exit_code: 0
----- stdout -----
[generate] machine: machine-name
  - artifact: test-artifact
    files to produce -> 2 files
      - very-simple-secrets => /run/secrets/very-simple-secrets
      - simple-secrets => /run/secrets/simple-secrets owner=deployer group=deployer
    running check_serialization: env inputs="/tmp/artifacts-tui-ci/inputs-test_artifact" machine="machine-name" artifact="test-artifact" /home/palo/dev/nixos/nixos-artifacts/pkgs/artifacts-tui/examples/generator_failes/test_check.sh
    check_serialization: failed with status exit status: 1 -> continuing with generation
secret number 1
enter prompt secret1: 
secret number 2
enter prompt secret2: 
=== Content of /tmp/artifacts-tui-ci/out-test-artifact/simple-secrets ===
two
=========================

----- stderr -----
