pkgs/artifacts-tui/tests/snapshots/command_tests__generator_incomplete_scenario.snap
---
source: tests/command_tests.rs
info:
  program: artifacts
  args:
    - "--log-level=debug"
    - generate
    - /home/palo/dev/nixos/nixos-artifacts/pkgs/artifacts-tui/examples/generator_incomplete/backend.toml
    - /home/palo/dev/nixos/nixos-artifacts/pkgs/artifacts-tui/examples/generator_incomplete/make.json
  env:
    TMPDIR: /tmp/artifacts-tui-ci
  stdin: "one\ntwo\n"
---
success: false
exit_code: 1
----- stdout -----
[generate]
machine: machine-name
artifact: test-artifact
DEBUG:     files to produce -> 2 files
DEBUG:       - very-simple-secrets => /run/secrets/very-simple-secrets
DEBUG:       - simple-secrets => /run/secrets/simple-secrets owner=deployer group=deployer
DEBUG:     running check_serialization: env inputs="/tmp/artifacts-tui-ci/inputs-test_artifact" machine="machine-name" artifact="test-artifact" /home/palo/dev/nixos/nixos-artifacts/pkgs/artifacts-tui/examples/generator_incomplete/test_check.sh
DEBUG:     check_serialization: failed with status exit status: 1 -> continuing with generation
secret number 1
enter prompt secret1: 
secret number 2
enter prompt secret2: 

----- stderr -----
ERROR: generator missing required files for artifact 'test-artifact': [very-simple-secrets]
