pkgs/artifacts-tui/tests/snapshots/command_tests__scenario_simple.snap
---
source: tests/command_tests.rs
info:
  program: artifacts-cli
  args:
    - "--log-level=debug"
    - generate
    - /home/palo/dev/nixos/nixos-artifacts/pkgs/artifacts-tui/examples/scenario_simple/backend.toml
    - /home/palo/dev/nixos/nixos-artifacts/pkgs/artifacts-tui/examples/scenario_simple/make.json
  env:
    TMPDIR: /tmp/artifacts-tui-ci
  stdin: "one\ntwo\n"
---
success: true
exit_code: 0
----- stdout -----
[generate]
DEBUG:     files to produce -> 2 files
DEBUG:       - simple-secrets => /run/secrets/simple-secrets owner=deployer group=deployer
DEBUG:       - very-simple-secrets => /run/secrets/very-simple-secrets
DEBUG:     running check_serialization: env inputs="/tmp/artifacts-tui-ci/inputs-test_artifact" machine="machine-name" artifact="test-artifact" /home/palo/dev/nixos/nixos-artifacts/pkgs/artifacts-tui/examples/scenario_simple/test_check.sh
$config: 
{
  "key": "example-key"
}
DEBUG:     check_serialization: failed with status exit status: 1 -> continuing with generation
⚡ machine-name/test-artifact
>>> DESC: secret number 1
>>> PROMPT: secret1
> 
>>> DESC: secret number 2
>>> PROMPT: secret2
> 
machine=machine-name
artifact=test-artifact
💾 serialize secrets
$config: 
{
  "key": "example-key"
}
=== Content of /tmp/artifacts-tui-ci/out-test-artifact/simple-secrets ===
two
=========================
=== Content of /tmp/artifacts-tui-ci/out-test-artifact/very-simple-secrets ===
one
=========================

----- stderr -----
