pkgs/artifacts-tui/tests/snapshots/command_tests__ssh_keygen_scenario.snap
---
source: tests/command_tests.rs
info:
  program: artifacts
  args:
    - "--log-level=debug"
    - generate
    - /home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-tui/examples/ssh-keygen/backend.toml
    - /home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-tui/examples/ssh-keygen/make.json
    - "--machine=machine-name"
  env:
    TMPDIR: /tmp/artifacts-tui-ci
  stdin: ""
---
success: true
exit_code: 0
----- stdout -----
[generate]
DEBUG:     files to produce -> 2 files
DEBUG:       - id_ed25519 => /run/secrets/id_ed25519
DEBUG:       - id_ed25519.pub => /run/secrets/id_ed25519.pub
DEBUG:     running check_serialization: env inputs="/tmp/artifacts-tui-ci/inputs-artifact.one" machine="machine-name" artifact="artifact.one" /home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-tui/examples/ssh-keygen/test_check.sh
id_ed25519
id_ed25519.pub
DEBUG:     check_serialization: failed with status exit status: 1 -> continuing with generation
⚡ machine-name/artifact.one
DEBUG: bwrap command: bwrap --unshare-all --unshare-user --uid 1000 --gid 1000 --tmpfs / --chdir / --ro-bind /nix/store /nix/store --tmpfs /usr/lib/systemd --proc /proc --dev /dev --bind /tmp/artifacts-tui-ci/prompt-artifact.one /tmp/artifacts-tui-ci/prompt-artifact.one --bind /tmp/artifacts-tui-ci/out-artifact.one /tmp/artifacts-tui-ci/out-artifact.one --ro-bind /home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-tui/examples/ssh-keygen /home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-tui/examples/ssh-keygen --ro-bind /bin /bin --ro-bind /usr/bin /usr/bin --ro-bind /tmp/artifacts-tui-ci/artifacts-tui-passwd-65ccc173a2653c6b.txt /etc/passwd -- /bin/sh /home/palo/dev/artifacts/nixos-artifacts/pkgs/artifacts-tui/examples/ssh-keygen/test_generator.sh
Generating public/private ed25519 key pair.
Your identification has been saved in /tmp/artifacts-tui-ci/out-artifact.one/id_ed25519
Your public key has been saved in /tmp/artifacts-tui-ci/out-artifact.one/id_ed25519.pub
The key fingerprint is:
SHA256:3c2oAW3Wt80IzJvwKhcgKk770cDHNJ9tCslYJHq9ai4 user@cherry
The key's randomart image is:
+--[ED25519 256]--+
|    . .          |
|   . +   . +     |
|  . . * o = = .  |
|   o B * O + O = |
|  o = B S * * = o|
| o o = . o =     |
|  o + . o +      |
|  E+ .   o       |
|   .o            |
+----[SHA256]-----+
machine-name ssh key for  = ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAILy+MljiYf7M8j9LaX5FZSdxkoPiE+S9Y3KBKuVUDh39 user@cherry
💾 serialize secrets
=== Content of /tmp/artifacts-tui-ci/out-artifact.one/id_ed25519 ===
-----BEGIN OPENSSH PRIVATE KEY-----
b3BlbnNzaC1rZXktdjEAAAAABG5vbmUAAAAEbm9uZQAAAAAAAAABAAAAMwAAAAtzc2gtZW
QyNTUxOQAAACC8vjJY4mH+zPI/S2l+RWUncZKD4hPkvWNygSrlVA4d/QAAAJB4WAk4eFgJ
OAAAAAtzc2gtZWQyNTUxOQAAACC8vjJY4mH+zPI/S2l+RWUncZKD4hPkvWNygSrlVA4d/Q
AAAEDSaBzX1Lb0u4R4KUSVRQhBLhemh+n76yR1+SvxfV4sGry+MljiYf7M8j9LaX5FZSdx
koPiE+S9Y3KBKuVUDh39AAAAC3VzZXJAY2hlcnJ5AQI=
-----END OPENSSH PRIVATE KEY-----
=========================
=== Content of /tmp/artifacts-tui-ci/out-artifact.one/id_ed25519.pub ===
ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAILy+MljiYf7M8j9LaX5FZSdxkoPiE+S9Y3KBKuVUDh39 user@cherry
=========================

----- stderr -----
